# uC-OS3

./: meson.build
Ports/ARM-Cortex-A/ARMv7-A/: meson.build
Ports/ARM-Cortex-A/ARMv7-A/GNU/: meson.build
Ports/POSIX/: meson.build
Ports/Win32/: meson.build
Ports/Win32/Visual_Studio/: os_cpu_c.c
